--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,8 @@ iframe {
     color: #999999;
     margin-bottom: 0;
 }
- .video-box a .icon i {
+
+.video-box a .icon i {
     position: relative;
     left: 50%;
     top: 50%;
@@ -305,14 +306,17 @@ iframe {
     line-height: 70px;
     text-align: center;
 }
+
 .bg-shape {
     background: url("http://demo.themefisher.com/themefisher/lifetrakr/images/backgrounds/shape-bg.png") no-repeat;
     background-position: center;
 }
+
 .section-title {
     text-align: center;
     margin-bottom: 85px;
 }
+
 .section-title h2 {
     font-size: 48px;
     font-family: "Josefin Sans", sans-serif;
@@ -320,21 +324,25 @@ iframe {
     margin-bottom: 30px;
     color: #5e5e5e;
 }
+
 .section-title p {
     width: 70%;
     margin: 0 auto;
     font-size: 16px;
     line-height: 30px;
 }
+
 .pricing-table {
     background: #fff;
     box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
     padding: 50px 0;
     margin-bottom: 80px;
 }
+
 .pricing-table .title {
     margin-bottom: 30px;
 }
+
 .pricing-table .title h5 {
     text-transform: uppercase;
     font-weight: 600;
@@ -343,9 +351,11 @@ iframe {
     margin-bottom: .5rem;
     line-height: 1;
 }
+
 .pricing-table .price {
     margin-bottom: 30px;
 }
+
 .pricing-table .price p {
     font-size: 36px;
     font-weight: bold;
@@ -354,10 +364,12 @@ iframe {
     margin-bottom: 0;
     margin-top: 0;
 }
+
 ul.feature-list {
     margin: 0;
     padding: 0;
 }
+
 ul.feature-list li {
     margin: 15px 0;
     font-size: 16px;
@@ -365,9 +377,11 @@ ul.feature-list li {
     line-height: 22px;
     color: #999999;
 }
+
 .pricing-table .action-button {
     margin-top: 30px;
 }
+
 .btn-main-rounded {
     letter-spacing: .075em;
     background: #7d71d3;
@@ -376,6 +390,155 @@ ul.feature-list li {
     padding: 15px 40px;
     border-radius: 100px;
 }
-.btn-main-rounded:hover{
+
+.btn-main-rounded:hover {
     color: white;
+}
+
+.cta-download {
+    position: relative;
+    padding: 165px 0;
+}
+
+.bg-3 {
+    background: url("http://demo.themefisher.com/themefisher/lifetrakr/images/backgrounds/desk-bg.jpg") fixed no-repeat;
+    background-size: cover;
+}
+
+.cta-download .image-block {
+    position: absolute;
+    top: -245px;
+}
+
+.content-block h2 {
+    font-weight: 300;
+    font-family: "Josefin Sans", sans-serif;
+    margin-bottom: 30px;
+    color: #fff;
+    font-size: 48px;
+    line-height: 1;
+}
+
+.content-block p {
+    line-height: 30px;
+    margin-bottom: 40px;
+    color: #fff;
+    font-size: 14px;
+    letter-spacing: 0;
+}
+
+.list-inline {
+    padding-left: 0;
+    list-style: none;
+}
+
+.list-inline-item:not(:last-child) {
+    margin-right: 25px;
+}
+
+.counter {
+    padding-top: 180px;
+}
+
+.counter-item {
+    text-align: center;
+    background: #7d71d3;
+    padding: 40px 0;
+    border-radius: 8px;
+}
+
+.counter-item h3 {
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+
+.counter-item p {
+    text-transform: uppercase;
+}
+
+.bg-shape-two {
+    background: url("http://demo.themefisher.com/themefisher/lifetrakr/images/backgrounds/shape-02-bg.png") no-repeat;
+    background-position: center;
+}
+
+.team-member {
+    background: #fff;
+    padding: 30px;
+    box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.05);
+}
+
+.team-member .image {
+    margin-bottom: 30px;
+}
+
+.team-member .image img {
+    border-radius: 100%;
+}
+
+.team-member .name h5 {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.team-member .position {
+    margin-bottom: 20px;
+}
+
+.skill-bar {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.progress {
+    width: 80%;
+    height: 7px;
+    align-self: center;
+    display: flex;
+    overflow: hidden;
+    font-size: .75rem;
+    line-height: 1rem;
+    text-align: center;
+    background-color: #e9ecef;
+    border-radius: .25rem;
+}
+
+span {
+    letter-spacing: 0;
+    line-height: 22px;
+    color: #999999;
+    margin-bottom: 0;
+    font-size: 12px;
+    margin-left: 15px;
+}
+
+.list-inline-item:not(:last-child) {
+    margin-right: 5px;
+}
+
+.list-inline-item {
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 22px;
+    color: #999999;
+    margin-bottom: 0;
+}
+
+ul.social-icons li a {
+    display: block;
+    height: 35px;
+    width: 35px;
+    background: #f8f8f8;
+    text-align: center;
+    border-radius: 100%;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 22px;
+    color: #999999;
+    margin-bottom: 0;
+}
+
+.fa-linkedin{
+    width: 16px;
+    line-height: 35px;
+
 }
